--- a/css/style.css
+++ b/css/style.css
@@ -91,10 +91,6 @@ input {
   outline: none;
 }
 
-main {
-  display: flex;
-}
-
 .wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -111,6 +107,7 @@ main {
   -webkit-box-flex: 1;
   -ms-flex: 1 0 auto;
   flex: 1 0 auto;
+  display: flex;
 }
 
 .footer {
@@ -125,21 +122,25 @@ main {
   padding: 0 15px;
   display: flex;
 }
+
 .dimention {
-  flex: 1 1 100%;
-  /* align-items: center;
-  justify-content: center; */
+  display: flex;
+  flex-direction: column;
+  /* flex: 1 1 100%; */
+  align-items: center;
+  justify-content: center;
   padding: 30px;
 }
 .dimention__block {
   display: flex;
-  height: 100%;
+  /* height: 100%; */
   flex-direction: column;
   justify-content: center;
   align-items:center;
   font-weight: bold;
   line-height: 1.2;
   text-align: center;
+  margin-bottom: 30px;
 }
 .dimention__block p:first-child {
   font-size: 48px;
@@ -147,4 +148,12 @@ main {
 }
 .dimention__block p:last-child {
   font-size: 72px;
+}
+.dimention__device {
+  font-size: 16px;
+  line-height: 1.2;
+  align-self: flex-start;
+}
+.dimention__device p:not(:last-child)  {
+  margin-bottom: 3px;
 }
