--- a/css/style.css
+++ b/css/style.css
@@ -152,8 +152,45 @@ input {
 .dimention__device {
   font-size: 16px;
   line-height: 1.2;
+  display: flex;
+  justify-content: space-between;
   align-self: flex-start;
+  width: 100%;
 }
 .dimention__device p:not(:last-child)  {
   margin-bottom: 3px;
+}
+.dimention__device dl {
+  max-width: 400px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  width: 100%;
+}
+.dimention__device dl h3 {
+  text-align: center;
+  border-bottom: 1px solid #fff;
+  line-height: 2;
+  margin-bottom: 7px;
+}
+.dimention__item {
+  display: flex;
+  margin-bottom: 5px;
+  gap: 10px;
+  justify-content: space-between;
+}
+.dimention__item dt {
+  position: relative;
+  overflow: hidden;
+  flex-grow: 1;
+  font-weight: 700;
+}
+.dimention__item dt::after {
+  content: "..........................................................";
+  position: absolute;
+}
+.dimention__item dd {
+  max-width: 155px;
+  flex: 1 1 54%;
+  text-align: right;
 }
